@@ -1464,7 +1464,7 @@ $2 تغییرمسیرها فهرست شوند &nbsp; جستجو برای $3 $9',
 'booksources-go'            => 'برو',
 'booksources-text'          => 'در زیر فهرستی از پیوندها به وبگاههای دیگر که کتاب‌های نو و دست‌دوم می‌فروشند آمده‌است. همچنین ممکن است اطلاعات بیشتری راجع به کتاب مورد نظر شما بدارند.',
 
-'categoriespagetext' => 'رده‌های زیر در ویکی وجود دارند.',
+'categoriespagetext' => 'رده‌های زیر حاوی صفحه یا پرونده هستند.',
 'data'               => 'داده',
 'userrights'         => 'مدیریت اختیارات کاربر',
 'groups'             => 'گروههای کاربری',
