@@ -1457,7 +1457,7 @@ $2',
 'booksources-go'            => 'הצגה',
 'booksources-text'          => 'להלן רשימת קישורים לאתרים אחרים המוכרים ספרים חדשים ויד־שנייה, ושבהם עשוי להיות מידע נוסף לגבי ספרים שאתם מחפשים:',
 
-'categoriespagetext' => 'אלו הקטגוריות הקיימות באתר.',
+'categoriespagetext' => 'הקטגוריות הבאות כוללות דפים או קובצי מדיה.',
 'data'               => 'נתונים',
 'userrights'         => 'ניהול הרשאות משתמש',
 'groups'             => 'קבוצות משתמשים',
