@@ -17,7 +17,7 @@
 }
 #content {
 	margin: 2.8em 0 0 12.2em;
-	padding: 0 1em 1.5em 1em;
+	padding: 0 1em 1em 1em;
 	position: relative;
 	z-index: 2;
 }
