@@ -57,7 +57,11 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   'opensearch-desc' message.
 * (bug 13135) Special:Userrights now passes IDs through form submission
   to allow functionality on not-quite-right usernames
-
+* (bug 12575) Prevent duplicate patrol log entries from being created
+* (bug 13174) __HIDDENCAT__ now applies only to category pages
+* (bug 13031) Add links to user pages in e-mail form
+* (bug 13147) Description for categoriespagetext (used in Special:Categories) reworded
+* (bug 11561) Fix fatal error when calling action=revert to non-image page
 
 === API changes in 1.13 ===
 
